--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+input[type='date']::before {
+  content: attr(placeholder);
+  position: absolute;
+  color: inherit;
+}
+
+input[type='date'] {
+  color: transparent;
+}
+
+input[type='date']:focus,
+input[type='date']:valid {
+  color: inherit;
+}
+
+input[type='date']:focus::before,
+input[type='date']:valid::before {
+  content: '';
+}
+
+.date-input .MuiFormLabel-asterisk,
+.date-input .MuiInputLabel-asterisk {
+  display: none;
 }
